test/scc/pp/errors/042.a
042.t:2:2: error: unterminated #ifndef